# triton

./: .gitignore  CLAUDE.md
docs/emit-cuda/: design.md  op-mapping.md  test-report.md
include/triton/Tools/Sys/: GetEnv.hpp
lib/Analysis/: AxisInfo.cpp
lib/Dialect/Triton/Transforms/: CMakeLists.txt  RewriteTensorPointer.cpp
python/src/: ir.cc
python/test/unit/language/: test_core.py
python/triton/: knobs.py
python/triton/_C/: __init__.py
python/triton/compiler/: code_generator.py  compiler.py
python/triton/runtime/: _binder_c.c  _fastpath.py  autotuner.py  build_binder_c.py  cache.py  host_trace.py  jit.py
python/tutorials/emit-cuda/: 01-vector-add.py  02-fused-softmax.py  03-matrix-multiplication.py  04-low-memory-dropout.py  05-layer-norm.py  06-fused-attention.py  07-extern-functions.py  08-grouped-gemm.py  09-persistent-matmul.py  10-block-scaled-matmul.py  11-programmatic-dependent-launch.py  _test_tma_s1.py  run_all_tests.py  test_all.py  test_compile_all.py  test_e2e.py  test_integrated.py  test_small.py  test_utils.py  tma_driver_source.py  tma_launcher_call.py  tma_launcher_host.py  tma_make_launcher.c  tma_matmul_generated.cu  tma_matmul_our.ttgir  tma_matmul_triton.llir  tma_matmul_triton.ptx  tma_matmul_triton.ttgir  tma_matmul_triton.ttir
test/Conversion/: tritongpu_to_llvm.mlir
test/TritonGPU/: accelerate-matmul.mlir
triton_cuda_backend/: .gitignore  CMakeLists.txt  README.md  _triton_cuda_autoload.py  build_plugin.sh  pyproject.toml  setup.py  triton_cuda_backend.pth
triton_cuda_backend/csrc/: CUDACodeGen.cpp  CUDACodeGen.h  EmitCudaPlugin.cpp  EpilogueOverlapPass.cpp  Im2colRewritePass.cpp  MulticastPass.cpp  Passes.h  PersistentTilePass.cpp  TritonGPUToCUDA.cpp  WgPingpongPass.cpp
triton_cuda_backend/csrc/TritonGPUToCUDA/: TritonGPUToCUDA.h
triton_cuda_backend/skills/conv-im2col-perf/: SKILL.md
triton_cuda_backend/skills/fa3-backward-perf/: SKILL.md
triton_cuda_backend/tests/: smoke.py
triton_cuda_backend/triton_cuda_backend/: __init__.py  _gluon_ext.py  _stages.py
triton_cuda_backend/tutorials/: 01-warp-specialize-gemm.py  02-fused-attention-causal.py  03-fused-attention-bwd.py  04-conv.py
