[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-cuda-backend"
version = "0.1.0"
description = "Non-invasive CUDA C++ codegen backend plugin for Triton (sm90a)"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["triton_cuda_backend"]
py-modules = ["_triton_cuda_autoload"]

[tool.setuptools.package-data]
triton_cuda_backend = ["emit_cuda.so"]
